# skypro_hw_28

./: pyproject.toml
ads/: admin.py  models.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ads_options_alter_categories_options_and_more.py  0003_alter_categories_id.py  0004_alter_ads_category_alter_ads_description_and_more.py
ads/urls/: ads_urls.py  categories_urls.py
avito/: settings.py  urls.py
data/postgres/: docker-compose.yaml
data/refined_json/: ads.json  categories.json  locations.json  users.json
data/unrefined_csv/: constants.py
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_locations_id_alter_users_id.py
utills/: data_converter.py  temp.py
